assets/styles/main.css
/* ... */
.u-font-normal {
  font-weight: 400 !important;
}

.u-font-bold {
  font-weight: 700 !important;
}

.u-font-italic {
  font-style: italic !important;
}

.u-font-0 {
  font-size: calc((12 * 1px) + (12 - 12) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-1 {
  font-size: calc((12 * 1px) + (14 - 12) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-2 {
  font-size: calc((14 * 1px) + (16 - 14) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-3 {
  font-size: calc((16 * 1px) + (18 - 16) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-4 {
  font-size: calc((16 * 1px) + (20 - 16) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-5 {
  font-size: calc((20 * 1px) + (24 - 20) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-6 {
  font-size: calc((24 * 1px) + (30 - 24) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-7 {
  font-size: calc((30 * 1px) + (38 - 30) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-8 {
  font-size: calc((40 * 1px) + (48 - 40) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-9 {
  font-size: calc((48 * 1px) + (68 - 48) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-10 {
  font-size: calc((68 * 1px) + (72 - 68) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1.2;
}

.u-font-11 {
  font-size: calc((40 * 1px) + (104 - 40) * ((100vw - 320px) / (1440 - 320)));
  line-height: 1;
}

.u-text-justify {
  text-align: justify !important;
}

.u-text-nowrap {
  white-space: nowrap !important;
}

.u-text-capitalize {
  text-transform: capitalize !important;
}

.u-text-lowercase {
  text-transform: lowercase !important;
}

.u-text-uppercase {
  text-transform: uppercase !important;
}

.u-text-center {
  text-align: center !important;
}

.u-text-left {
  text-align: left !important;
}

.u-text-right {
  text-align: right !important;
}

.u-text-hide {
  overflow: hidden;
  text-indent: 150%;
  white-space: nowrap;
}


@media screen and (max-width: 412px) {

  #illustration-1 {
    margin: 0 auto;
    width: 240px;
    height: 230px;
    text-align: center;
  }

  #illustration-2 {
    width: 285px;
    height: 285px;
    margin: 0 auto;
  }

  #os-icons {
    width: 226px;
    height: 34px;
    margin: 0 auto;
  }

  .header-section {
    width: 90%;
    text-align: center;
    margin: 0 auto;
    padding: 0px;
  }

  .header-section h3 {
    font-size: 32px;
    text-align: center;
    margin: 0 auto;
  }

  .para-section {
    text-align: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: 260px;
    margin: 0 auto;
  }

  .header-section p, .header-section ul {
     font-size: 14px;
     margin-left: 0px;
   }

  #apps-para {
    text-align: left;
    margin: 0 auto;
  }

  #imp-para {
    font-size: 18px;
  }

  #mp-para ul li {
    list-style: none;
  }

  .list-title {
    font-size: 18px;
  }

  #form-home {
    margin: 0 auto;
    width: 280px;
  }

  #sl-home, #sl-home h3 {
    text-align: left;
    margin-left: 15px;
  }

  #cs-home img {
    width: 80px;
  }

  #cs-home p {
    width: 100px;
    height: 100px;
    margin: 0px;
  }

  #cs-home .l-row {
    width: 280px;
  }

  .h1,
  h1 {
    font-size: 30px;
  }

  .h2,
  h2 {
    font-size: 24px;
  }

  .h3,
  h3 {
    font-size: 20px;
  }

  .h4,
  h4 {
    font-size: 16px;
  }

  .h5,
  h5 {
    font-size: 16px;
  }

  .h6,
  h6 {
    font-size: 14px;
  }

  .c-jumbotron {
    margin-bottom: 40px;
    height: 560px;
  }

  .layout-who-we-are .c-jumbotron {
    margin: 0px;
  }

  .c-header__logo svg {
    width: 180px;
  }

  .c-gate .c-gate__button .c-gate__button-heading {
    font-size: 72px;
  }

  html.no-js .c-jumbotron .c-jumbotron__heading .c-jumbotron__heading-text {
    font-size: 60px;
  }

  .c-nav ul li a {
    font-size: 40px;
  }

  .c-nav ul ul li a {
    font-size: 30px;
  }

  .c-page-title .c-page-title__heading .c-page-title__heading-text {
    font-size: 60px;
  }

  .c-testimonial p {
    font-size: 22px;
  }

  .c-gate .c-gate__button .c-gate__button-heading {
    font-size: 72px;
  }

  html.no-js .c-jumbotron .c-jumbotron__heading .c-jumbotron__heading-text {
    font-size: 60px;
  }

  .c-nav ul li a {
    font-size: 40px;
  }

  .c-nav ul ul li a {
    font-size: 30px;
  }

  .c-page-title .c-page-title__heading .c-page-title__heading-text {
    font-size: 60px;
  }

  .c-testimonial p {
    font-size: 22px;
  }

  .u-font-0 {
    font-size: 12px;
  }

  .u-font-1 {
    font-size: 12px;
  }

  .u-font-2 {
    font-size: 14px;
  }

  .u-font-3 {
    font-size: 16px;
  }

  .u-font-4 {
    font-size: 16px;
  }

  .u-font-5 {
    font-size: 20px;
  }

  .u-font-6 {
    font-size: 24px;
  }

  .u-font-7 {
    font-size: 30px;
  }

  .u-font-8 {
    font-size: 40px;
  }

  .u-font-9 {
    font-size: 48px;
  }

  .u-font-10 {
    font-size: 32px;
  }

  .u-font-11 {
    font-size: 40px;
  }

  .u-font-0 {
    font-size: 12px;
  }

  .u-font-1 {
    font-size: 12px;
  }

  .u-font-2 {
    font-size: 14px;
  }

  .u-font-3 {
    font-size: 16px;
  }

  .u-font-4 {
    font-size: 16px;
  }

  .u-font-5 {
    font-size: 20px;
  }

  .u-font-6 {
    font-size: 24px;
  }

  .u-font-7 {
    font-size: 30px;
  }

  .u-font-8 {
    font-size: 40px;
  }

  .u-font-9 {
    font-size: 48px;
  }

  .u-font-10 {
    font-size: 68px;
  }

  .u-font-11 {
    font-size: 40px;
  }
}
/* ... */

